--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "lodash": "^4.17.21"
     },
     "devDependencies": {
+        "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.8.1",
         "css-minimizer-webpack-plugin": "^5.0.1",
         "eslint": "^8.44.0",
