--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "format": "prettier —write .",
         "build": "set NODE_ENV=production && webpack",
         "start": "webpack-dev-server --open"
@@ -17,14 +17,17 @@
         "lodash": "^4.17.21"
     },
     "devDependencies": {
+        "@types/jest": "^29.5.3",
         "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.8.1",
         "css-minimizer-webpack-plugin": "^5.0.1",
         "eslint": "^8.44.0",
         "html-webpack-plugin": "^5.5.3",
+        "jest": "^29.6.1",
         "mini-css-extract-plugin": "^2.7.6",
         "prettier": "^3.0.0",
         "style-loader": "^3.3.3",
+        "ts-jest": "^29.1.1",
         "ts-loader": "^9.4.4",
         "typescript": "^5.1.6",
         "webpack": "^5.88.1",
