--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "lint": "eslint",
         "test": "jest",
         "format": "prettier —write .",
         "build": "set NODE_ENV=production && webpack",
-        "start": "webpack-dev-server --open"
+        "start": "webpack-dev-server --open",
+        "prepare": "husky install"
     },
     "author": "",
     "license": "ISC",
@@ -23,6 +25,7 @@
         "css-minimizer-webpack-plugin": "^5.0.1",
         "eslint": "^8.44.0",
         "html-webpack-plugin": "^5.5.3",
+        "husky": "^8.0.3",
         "jest": "^29.6.1",
         "mini-css-extract-plugin": "^2.7.6",
         "prettier": "^3.0.0",
@@ -33,5 +36,11 @@
         "webpack": "^5.88.1",
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^4.15.1"
-    }
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {}
 }
