--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
         "eslint": "^8.44.0",
         "html-webpack-plugin": "^5.5.3",
         "husky": "^8.0.3",
+        "identity-obj-proxy": "^3.0.0",
         "jest": "^29.6.1",
+        "jest-environment-jsdom": "^29.6.2",
+        "jest-transform-css": "^6.0.1",
         "mini-css-extract-plugin": "^2.7.6",
         "prettier": "^3.0.0",
         "style-loader": "^3.3.3",
