--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "lodash": "^4.17.21"
     },
     "devDependencies": {
+        "@testing-library/dom": "^9.3.1",
         "@types/jest": "^29.5.3",
         "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.8.1",
@@ -30,6 +31,7 @@
         "jest": "^29.6.1",
         "jest-environment-jsdom": "^29.6.2",
         "jest-transform-css": "^6.0.1",
+        "jsdom": "^22.1.0",
         "mini-css-extract-plugin": "^2.7.6",
         "prettier": "^3.0.0",
         "style-loader": "^3.3.3",
